tdf#164903 sw inline heading: fix DOCX layout by zeroing top margin

Skip top margin of the paragraph of the inline heading by
direct paragraph formatting to fix DOCX layout interoperability.

Regression from commit 56588663a0fddc005c12afaa7d3f8874d036875f
"tdf#131728 sw inline heading: fix DOCX paragraph layout
interoperability".

Change-Id: I9fb485b08b4f3fd7506562e636151ccb6ee7b0a2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182138
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 33e54802ee31d4c76e7e41b714f5bfeed484bbd2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182172
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>